<resources>
    <string name="app_name">Application</string>
    <string name="connect_to_foursquare">Connect to foursquare</string>
    <string name="nearby">Nearby</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="category">CATEGORY</string>
    <string name="id">ID</string>
    <string name="location">LOCATION</string>
    <string name="name">NAME</string>
    <string name="fsq_id">FSQ ID</string>
    <string name="logout">Logout</string>
    <string name="access_token">Access Token:</string>
</resources>