<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.sdv.kit.application.compound.ActionBarView
        android:id="@+id/actionBarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.sdv.kit.application.compound.ActionBarView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/secondary_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBarView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/placeImagesViewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/category"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/placeCategoryNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Plaza" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/id"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/placeCategoryIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="314893498203942342" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/location"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/placeLocationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Gomel Sovetskaya 3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/name"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/placeNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Mandarin Plaza" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/fsq_id"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/placeFsqIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="5a187743ccad6b307315e6fe" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>